# CTestIFileDialog

./: .gitignore  CMakeLists.txt  CMakePresets.json  IFileDialog.cpp  IFileDialog.h  ProjUtil.cpp  ProjUtil.h  ProjWinUtils.cpp  ProjWinUtils.h  README.md  RawWinAPI.cpp  RawWinAPI.h  RawWinAPI_new.cpp  RawWinAPI_new.h  Unknwn.h  main.cpp  vcvenv.ps1
